[package]
name = "browser_cluster"
version = "0.1.0"
edition = "2024"
description = "Library sederhana untuk menyapa orang"
license = "MIT"
repository = "https://github.com/zhinea/browser-cluster"
keywords = ["headless-browser", "puppeteer", "browser", "cluster"]
categories = ["accessibility"]

[dependencies]
async-trait = "0.1.68"
futures = "0.3.28"
thiserror = "1.0.43"
tokio = { version = "1.28.2", features = ["full"] }
num_cpus = "1.15.0"
tracing = "0.1.37"

[features]
default = []
fantoccini = ["dep:fantoccini"]
headless_chrome = ["dep:headless_chrome"]
playwright = ["dep:playwright"]

# Optional browser backends
[dependencies.fantoccini]
version = "0.19.3"
optional = true

[dependencies.headless_chrome]
version = "1.0.6"
optional = true

[dependencies.playwright]
version = "0.0.20"
optional = true

[dev-dependencies]
tokio-test = "0.4.2"
anyhow = "1.0.71"